<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_connect"
    tools:context="com.paygilant.myshop.OnLine.ByOnlineActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ui_appBar_start">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@color/ui_appBar_start"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:textSize="20sp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/editTextConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:fontFamily="sans-serif"
                android:hint="@string/username"
                android:lineSpacingExtra="6sp"
                android:textColorHint="#61000000"
                android:textColorLink="@color/ui_appBar_start"
                android:textSize="18sp"
                android:inputType="text"

                android:background="@drawable/edt_bg_selector"
                android:textStyle="normal" />
            <EditText
                android:paddingTop="10dp"
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:lineSpacingExtra="6sp"
                android:textColorHint="#61000000"
                android:textColorLink="@color/ui_appBar_start"
                android:textSize="18sp"
                android:inputType="textPassword"

                android:background="@drawable/edt_bg_selector"
                android:textStyle="normal" />
            <EditText
                android:paddingTop="10dp"
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:fontFamily="sans-serif"
                android:hint="@string/email"
                android:lineSpacingExtra="6sp"
                android:textColorHint="#61000000"
                android:textColorLink="@color/ui_appBar_start"
                android:textSize="18sp"
                android:background="@drawable/edt_bg_selector"
                android:inputType="textEmailAddress"

                android:textStyle="normal" />

            <EditText
                android:paddingTop="10dp"
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:fontFamily="sans-serif"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:digits="1234567890+-"
                android:lineSpacingExtra="6sp"
                android:textColorHint="#61000000"
                android:textColorLink="@color/ui_appBar_start"
                android:textSize="18sp"
                android:background="@drawable/edt_bg_selector"
                android:textStyle="normal" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonConnect"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:textSize="14sp"
                android:foreground="?attr/selectableItemBackground"

                android:fontFamily="sans-serif-medium"
                android:background="#33999999"
                android:textStyle="normal"
                android:textColor="#000"
                android:lineSpacingExtra="3sp"
                android:gravity="center"
                android:text="@string/connect"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>